--- a/packages/ember/package.json
+++ b/packages/ember/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glimdown/ember",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha.0",
   "main": "index.js",
   "author": "NullVoxPopuli",
   "license": "MIT"
