--- a/package.json
+++ b/package.json
@@ -1,10 +1,43 @@
 {
   "name": "glimdown",
   "version": "0.0.0",
-  "description": "A plugin for the Unified ecosystem for using glimmer/ember with markdown",
-  "main": "index.js",
+  "description": "Glimmer + Markdown",
   "repository": "git@github.com:NullVoxPopuli/glimdown.git",
   "author": "NullVoxPopuli",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "test": "turbo run test",
+    "lint:fix": "turbo run lint:fix",
+    "lint": "turbo run lint"
+  },
+  "devDependencies": {
+    "concurrently": "^7.2.2",
+    "turbo": "1.3.1"
+  },
+  "turbo": {
+    "baseBranch": "origin/main",
+    "pipeline": {
+      "start": {
+        "dependsOn": [
+          "^build"
+        ],
+        "cache": false
+      },
+      "build": {
+        "dependsOn": [
+          "^build"
+        ]
+      },
+      "lint": {},
+      "lint:fix": {},
+      "test": {}
+    }
+  },
+  "volta": {
+    "node": "18.16.0",
+    "yarn": "1.22.17",
+    "npm": "8.3.1",
+    "pnpm": "8.2.0"
+  }
 }
