--- a/packages/codemirror/glimmer/package.json
+++ b/packages/codemirror/glimmer/package.json
@@ -21,39 +21,34 @@
     "@codemirror/language": "^6.6.0",
     "@codemirror/state": "^6.2.0",
     "@codemirror/theme-one-dark": "^6.1.2",
-    "@codemirror/view": "^6.9.5",
+    "@codemirror/view": "^6.11.0",
     "@glimdown/lezer-infra": "*",
-    "@lezer/common": "^1.0.2",
-    "@lezer/generator": "^1.2.2",
+    "@lezer/generator": "^1.2.3",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
     "@types/mocha": "^10.0.1",
     "codemirror": "^6.0.1",
-    "concurrently": "^7.2.2",
-    "eslint": "^8.38.0",
-    "mocha": "^9.2.2",
-    "prettier": "^2.8.7",
-    "rollup": "^3.20.6",
+    "concurrently": "^8.0.1",
+    "eslint": "^8.40.0",
+    "prettier": "^2.8.8",
     "typescript": "5.0.4",
-    "vite": "^4.2.2"
+    "vite": "^4.3.5"
   },
   "dependencies": {
-    "@codemirror/lang-css": "^6.1.1",
     "@codemirror/lang-html": "^6.4.3",
-    "@codemirror/lang-javascript": "^6.1.7",
+    "@lezer/common": "^1.0.2",
     "@lezer/highlight": "^1.1.4",
-    "@lezer/javascript": "^1.4.2",
-    "@lezer/lr": "^1.3.3"
+    "@lezer/javascript": "^1.4.3",
+    "@lezer/lr": "^1.3.4"
   },
   "scripts": {
     "dev": "concurrently 'npm:dev:*' -restart-tries -1",
     "dev:vite": "vite ./dev/",
     "dev:cm": "node ./dev/watch.cjs src/index.ts",
-    "lint:prettier:fix": "prettier -w .",
-    "lint:prettier": "prettier -c .",
+    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
+    "lint:prettier": "pnpm -w exec lint prettier",
     "lint:fix": "concurrently 'npm:lint:*:fix' --names 'fix:'",
-    "lint:js": "eslint . --cache",
-    "lint:js:fix": "eslint . --fix",
-    "build": "cm-buildhelper src/index.ts",
-    "test": "mocha ../-infra/test.js"
+    "lint:js": "pnpm -w exec lint js",
+    "lint:js:fix": "pnpm -w exec lint js:fix",
+    "build": "cm-buildhelper src/index.ts"
   }
 }
