--- a/packages/remark/ember/package.json
+++ b/packages/remark/ember/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.0-alpha.0",
   "main": "index.js",
   "author": "NullVoxPopuli",
-  "license": "MIT"
+  "license": "MIT",
+  "volta": {
+    "extends": "../../../package.json"
+  }
 }
