--- a/packages/codemirror/-infra/package.json
+++ b/packages/codemirror/-infra/package.json
@@ -10,5 +10,8 @@
     "@lezer/highlight": "^1.1.4",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "rollup": "^3.21.5"
+  },
+  "volta": {
+    "extends": "../../../package.json"
   }
 }
