--- a/packages/remark/syntax/package.json
+++ b/packages/remark/syntax/package.json
@@ -27,8 +27,6 @@
   },
   "devDependencies": {
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.0",
     "babel-eslint": "^10.1.0",
     "c8": "^7.13.0",
     "common-tags": "^1.8.2",
@@ -36,37 +34,20 @@
     "eslint-plugin-decorator-position": "^5.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "mdast": "^3.0.0",
     "mdast-util-from-markdown": "^1.3.0",
     "micromark": "^3.1.0",
     "prettier": "^2.8.8",
-    "semantic-release": "^21.0.2",
-    "semantic-release-monorepo": "^7.0.0",
     "typescript": "5.0.4",
-    "unified": "^10.1.1",
+    "unified": "^10.1.2",
     "vitest": "^0.31.0"
-  },
-  "release": {
-    "extends": "semantic-release-monorepo",
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/github",
-      "@semantic-release/git"
-    ]
   },
   "engines": {
     "node": ">=16.0.0"
   },
   "volta": {
-    "node": "16.13.2",
-    "yarn": "1.22.17"
+    "extends": "../../../package.json"
   },
   "dependencies": {
     "acorn": "^8.8.2",
