--- a/packages/codemirror/-infra/package.json
+++ b/packages/codemirror/-infra/package.json
@@ -13,5 +13,13 @@
   },
   "volta": {
     "extends": "../../../package.json"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "prettier": "latest",
+    "typescript": "latest",
+    "@nullvoxpopuli/eslint-configs": "latest"
   }
 }
