--- a/packages/codemirror/glimmer-js/package.json
+++ b/packages/codemirror/glimmer-js/package.json
@@ -25,15 +25,17 @@
     "@glimdown/lezer-infra": "*",
     "@lezer/common": "^1.0.2",
     "@lezer/generator": "^1.0.0",
-    "@nullvoxpopuli/eslint-configs": "^3.1.3",
+    "@nullvoxpopuli/eslint-configs": "latest",
     "@types/mocha": "^10.0.1",
     "codemirror": "^6.0.1",
     "concurrently": "^8.0.1",
-    "eslint": "^8.38.0",
+    "eslint": "latest",
     "mocha": "^10.2.0",
-    "prettier": "^2.8.7",
-    "typescript": "5.0.4",
-    "vite": "^4.2.1"
+    "prettier": "latest",
+    "typescript": "latest",
+    "vite": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest"
   },
   "dependencies": {
     "@codemirror/lang-css": "^6.2.0",
