--- a/packages/codemirror/glimmer/package.json
+++ b/packages/codemirror/glimmer/package.json
@@ -24,14 +24,16 @@
     "@codemirror/view": "^6.11.0",
     "@glimdown/lezer-infra": "*",
     "@lezer/generator": "^1.2.3",
-    "@nullvoxpopuli/eslint-configs": "^3.1.3",
+    "@nullvoxpopuli/eslint-configs": "latest",
     "@types/mocha": "^10.0.1",
     "codemirror": "^6.0.1",
     "concurrently": "^8.0.1",
-    "eslint": "^8.40.0",
-    "prettier": "^2.8.8",
-    "typescript": "5.0.4",
-    "vite": "^4.3.5"
+    "eslint": "latest",
+    "prettier": "latest",
+    "typescript": "latest",
+    "vite": "^4.3.5",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest"
   },
   "dependencies": {
     "@codemirror/lang-html": "^6.4.3",
