--- a/packages/remark/ember/package.json
+++ b/packages/remark/ember/package.json
@@ -6,5 +6,13 @@
   "license": "MIT",
   "volta": {
     "extends": "../../../package.json"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "prettier": "latest",
+    "typescript": "latest",
+    "@nullvoxpopuli/eslint-configs": "latest"
   }
 }
