--- a/packages/remark/syntax/package.json
+++ b/packages/remark/syntax/package.json
@@ -26,11 +26,11 @@
     "test:watch": "vitest --watch"
   },
   "devDependencies": {
-    "@nullvoxpopuli/eslint-configs": "^3.1.3",
+    "@nullvoxpopuli/eslint-configs": "latest",
     "babel-eslint": "^10.1.0",
     "c8": "^7.13.0",
     "common-tags": "^1.8.2",
-    "eslint": "^8.40.0",
+    "eslint": "latest",
     "eslint-plugin-decorator-position": "^5.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
@@ -38,10 +38,12 @@
     "mdast": "^3.0.0",
     "mdast-util-from-markdown": "^1.3.0",
     "micromark": "^3.1.0",
-    "prettier": "^2.8.8",
-    "typescript": "5.0.4",
+    "prettier": "latest",
+    "typescript": "latest",
     "unified": "^10.1.2",
-    "vitest": "^0.31.0"
+    "vitest": "^0.31.0",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest"
   },
   "engines": {
     "node": ">=16.0.0"
