--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "test": "turbo run test",
-    "lint:fix": "turbo run lint:fix",
-    "lint": "turbo run lint"
+    "test": "turbo run test --output-logs errors-only",
+    "lint:fix": "turbo run lint:fix --output-logs errors-only",
+    "lint": "turbo run lint --output-logs errors-only"
   },
   "devDependencies": {
     "@glimdown/dev": "workspace:*",
