--- a/packages/codemirror/glimdown/package.json
+++ b/packages/codemirror/glimdown/package.json
@@ -29,7 +29,13 @@
   "scripts": {
     "build": "lezer-generator src/glimdown.grammar -o src/parser && rollup -c",
     "build-debug": "lezer-generator src/glimdown.grammar --names -o src/parser && rollup -c",
-    "test": "mocha ../-infra/test.js"
+    "test": "mocha ../-infra/test.js",
+    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
+    "lint:prettier": "pnpm -w exec lint prettier",
+    "lint:fix": "pnpm -w exec lint fix",
+    "lint:js": "pnpm -w exec lint js",
+    "lint:js:fix": "pnpm -w exec lint js:fix",
+    "lint": "pnpm -w exec lint"
   },
   "volta": {
     "extends": "../../../package.json"
