--- a/packages/codemirror/glimmer/package.json
+++ b/packages/codemirror/glimmer/package.json
@@ -48,10 +48,11 @@
     "dev:cm": "node ./dev/watch.cjs src/index.ts",
     "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
     "lint:prettier": "pnpm -w exec lint prettier",
-    "lint:fix": "concurrently 'npm:lint:*:fix' --names 'fix:'",
+    "lint:fix": "pnpm -w exec lint fix",
     "lint:js": "pnpm -w exec lint js",
     "lint:js:fix": "pnpm -w exec lint js:fix",
-    "build": "cm-buildhelper src/index.ts"
+    "build": "cm-buildhelper src/index.ts",
+    "lint": "pnpm -w exec lint"
   },
   "volta": {
     "extends": "../../../package.json"
