--- a/packages/remark/syntax/package.json
+++ b/packages/remark/syntax/package.json
@@ -19,11 +19,14 @@
   },
   "scripts": {
     "build:types": "tsc --build",
-    "lint": "yarn lint:js",
-    "lint:js": "eslint .",
-    "lint:fix": "yarn lint:js --fix",
+    "lint": "pnpm -w exec lint",
+    "lint:js": "pnpm -w exec lint js",
+    "lint:fix": "pnpm -w exec lint fix",
     "test": "vitest --coverage --no-watch",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
+    "lint:prettier": "pnpm -w exec lint prettier",
+    "lint:js:fix": "pnpm -w exec lint js:fix"
   },
   "devDependencies": {
     "@nullvoxpopuli/eslint-configs": "latest",
