--- a/packages/codemirror/-infra/package.json
+++ b/packages/codemirror/-infra/package.json
@@ -15,12 +15,14 @@
     "extends": "../../../package.json"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint": "latest",
-    "prettier": "latest",
-    "typescript": "latest",
-    "@nullvoxpopuli/eslint-configs": "latest"
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.40.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
+    "@nullvoxpopuli/eslint-configs": "^3.1.3",
+    "@babel/eslint-parser": "^7.21.8",
+    "@babel/core": "^7.21.8"
   },
   "scripts": {
     "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
