--- a/packages/codemirror/glimmer-js/package.json
+++ b/packages/codemirror/glimmer-js/package.json
@@ -18,26 +18,22 @@
   },
   "devDependencies": {
     "@codemirror/buildhelper": "^0.1.16",
-    "@codemirror/language": "^6.2.0",
-    "@codemirror/state": "^6.2.0",
-    "@codemirror/theme-one-dark": "^6.1.1",
-    "@codemirror/view": "^6.0.3",
     "@glimdown/lezer-infra": "*",
     "@lezer/common": "^1.0.2",
     "@lezer/generator": "^1.0.0",
-    "@nullvoxpopuli/eslint-configs": "latest",
-    "@types/mocha": "^10.0.1",
+    "@nullvoxpopuli/eslint-configs": "^3.1.3",
     "codemirror": "^6.0.1",
     "concurrently": "^8.0.1",
-    "eslint": "latest",
-    "mocha": "^10.2.0",
-    "prettier": "latest",
-    "typescript": "latest",
-    "vite": "^4.2.1",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest"
+    "eslint": "^8.40.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "@babel/eslint-parser": "^7.21.8",
+    "@babel/core": "^7.21.8"
   },
   "dependencies": {
+    "lezer-glimmer": "workspace:^",
     "@codemirror/lang-css": "^6.2.0",
     "@codemirror/lang-html": "^6.4.3",
     "@codemirror/lang-javascript": "^6.1.7",
@@ -46,16 +42,13 @@
     "@lezer/lr": "^1.0.0"
   },
   "scripts": {
-    "dev": "concurrently 'npm:dev:*' -restart-tries -1",
-    "dev:vite": "vite ./dev/",
-    "dev:cm": "node ./dev/watch.cjs src/index.ts",
+    "dev": "node ./dev/watch.cjs src/index.ts",
     "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
     "lint:prettier": "pnpm -w exec lint prettier",
     "lint:fix": "pnpm -w exec lint fix",
     "lint:js": "pnpm -w exec lint js",
     "lint:js:fix": "pnpm -w exec lint js:fix",
     "build": "cm-buildhelper src/index.ts",
-    "test": "mocha ../-infra/test.js",
     "lint": "pnpm -w exec lint"
   },
   "volta": {
