--- a/packages/codemirror/glimmer/package.json
+++ b/packages/codemirror/glimmer/package.json
@@ -18,34 +18,27 @@
   },
   "devDependencies": {
     "@codemirror/buildhelper": "^0.1.16",
-    "@codemirror/language": "^6.6.0",
-    "@codemirror/state": "^6.2.0",
-    "@codemirror/theme-one-dark": "^6.1.2",
-    "@codemirror/view": "^6.11.0",
-    "@glimdown/lezer-infra": "*",
     "@lezer/generator": "^1.2.3",
-    "@nullvoxpopuli/eslint-configs": "latest",
-    "@types/mocha": "^10.0.1",
+    "@nullvoxpopuli/eslint-configs": "^3.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "codemirror": "^6.0.1",
     "concurrently": "^8.0.1",
-    "eslint": "latest",
-    "prettier": "latest",
-    "typescript": "latest",
-    "vite": "^4.3.5",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest"
+    "eslint": "^8.40.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
+    "@babel/eslint-parser": "^7.21.8",
+    "@babel/core": "^7.21.8"
   },
   "dependencies": {
-    "@codemirror/lang-html": "^6.4.3",
     "@lezer/common": "^1.0.2",
     "@lezer/highlight": "^1.1.4",
+    "@lezer/html": "^1.3.4",
     "@lezer/javascript": "^1.4.3",
     "@lezer/lr": "^1.3.4"
   },
   "scripts": {
-    "dev": "concurrently 'npm:dev:*' -restart-tries -1",
-    "dev:vite": "vite ./dev/",
-    "dev:cm": "node ./dev/watch.cjs src/index.ts",
+    "dev": "node ./dev/watch.cjs src/index.ts",
     "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
     "lint:prettier": "pnpm -w exec lint prettier",
     "lint:fix": "pnpm -w exec lint fix",
