--- a/packages/remark/syntax/package.json
+++ b/packages/remark/syntax/package.json
@@ -29,11 +29,10 @@
     "lint:js:fix": "pnpm -w exec lint js:fix"
   },
   "devDependencies": {
-    "@nullvoxpopuli/eslint-configs": "latest",
-    "babel-eslint": "^10.1.0",
+    "@nullvoxpopuli/eslint-configs": "^3.1.3",
     "c8": "^7.13.0",
     "common-tags": "^1.8.2",
-    "eslint": "latest",
+    "eslint": "^8.40.0",
     "eslint-plugin-decorator-position": "^5.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
@@ -41,12 +40,14 @@
     "mdast": "^3.0.0",
     "mdast-util-from-markdown": "^1.3.0",
     "micromark": "^3.1.0",
-    "prettier": "latest",
-    "typescript": "latest",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
     "unified": "^10.1.2",
     "vitest": "^0.31.0",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest"
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "@babel/eslint-parser": "^7.21.8",
+    "@babel/core": "^7.21.8"
   },
   "engines": {
     "node": ">=16.0.0"
