--- a/packages/remark/ember/package.json
+++ b/packages/remark/ember/package.json
@@ -23,6 +23,10 @@
     "lint:fix": "pnpm -w exec lint fix",
     "lint:js": "pnpm -w exec lint js",
     "lint:js:fix": "pnpm -w exec lint js:fix",
-    "lint": "pnpm -w exec lint"
+    "lint": "pnpm -w exec lint",
+    "_:lint:js": "pnpm -w exec lint js",
+    "_:lint:js:fix": "pnpm -w exec lint js:fix",
+    "_:lint:prettier:fix": "pnpm -w exec lint prettier:fix",
+    "_:lint:prettier": "pnpm -w exec lint prettier"
   }
 }
