Fix renovate glob pattern

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -36,7 +36,7 @@
         "prettier"
       ],
       "packagePatterns": [
-        "*/eslint*",
+        ".*/eslint.*",
         "eslint-plugin-.*",
         "eslint-config-.*",
         ".*typescript-eslint.*",
