Remove unused scripts

--- a/packages/codemirror/glimmer-js/package.json
+++ b/packages/codemirror/glimmer-js/package.json
@@ -43,17 +43,13 @@
   },
   "scripts": {
     "dev": "node ./dev/watch.cjs src/index.ts",
-    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "lint:prettier": "pnpm -w exec lint prettier",
-    "lint:fix": "pnpm -w exec lint fix",
-    "lint:js": "pnpm -w exec lint js",
-    "lint:js:fix": "pnpm -w exec lint js:fix",
     "build": "cm-buildhelper src/index.ts",
-    "lint": "pnpm -w exec lint",
     "_:lint:js": "pnpm -w exec lint js",
     "_:lint:js:fix": "pnpm -w exec lint js:fix",
     "_:lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "_:lint:prettier": "pnpm -w exec lint prettier"
+    "_:lint:prettier": "pnpm -w exec lint prettier",
+    "lint": "pnpm -w exec lint",
+    "lint:fix": "pnpm -w exec lint fix"
   },
   "volta": {
     "extends": "../../../package.json"
