--- a/packages/remark/ember/package.json
+++ b/packages/remark/ember/package.json
@@ -18,15 +18,11 @@
     "@babel/core": "^7.21.8"
   },
   "scripts": {
-    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "lint:prettier": "pnpm -w exec lint prettier",
-    "lint:fix": "pnpm -w exec lint fix",
-    "lint:js": "pnpm -w exec lint js",
-    "lint:js:fix": "pnpm -w exec lint js:fix",
-    "lint": "pnpm -w exec lint",
     "_:lint:js": "pnpm -w exec lint js",
     "_:lint:js:fix": "pnpm -w exec lint js:fix",
     "_:lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "_:lint:prettier": "pnpm -w exec lint prettier"
+    "_:lint:prettier": "pnpm -w exec lint prettier",
+    "lint": "pnpm -w exec lint",
+    "lint:fix": "pnpm -w exec lint fix"
   }
 }
