--- a/packages/remark/syntax/package.json
+++ b/packages/remark/syntax/package.json
@@ -19,18 +19,14 @@
   },
   "scripts": {
     "build:types": "tsc --build",
-    "lint": "pnpm -w exec lint",
-    "lint:js": "pnpm -w exec lint js",
-    "lint:fix": "pnpm -w exec lint fix",
     "test": "vitest --coverage --no-watch",
     "test:watch": "vitest --watch",
-    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "lint:prettier": "pnpm -w exec lint prettier",
-    "lint:js:fix": "pnpm -w exec lint js:fix",
     "_:lint:js": "pnpm -w exec lint js",
     "_:lint:js:fix": "pnpm -w exec lint js:fix",
     "_:lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "_:lint:prettier": "pnpm -w exec lint prettier"
+    "_:lint:prettier": "pnpm -w exec lint prettier",
+    "lint": "pnpm -w exec lint",
+    "lint:fix": "pnpm -w exec lint fix"
   },
   "devDependencies": {
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
