--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,24 @@ jobs:
     needs: [install_dependencies]
 
     steps:
-      - uses: wyvox/action@v1 
       - name: TurboRepo local server
         uses: felixmosh/turborepo-gh-artifacts@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: wyvox/action@v1 
       - run: pnpm lint
+
+  tests:
+    name: "Tests"
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    needs: [install_dependencies]
+
+    steps:
+      - name: TurboRepo local server
+        uses: felixmosh/turborepo-gh-artifacts@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: wyvox/action@v1 
+      - run: pnpm test
 
