--- a/packages/codemirror/glimdown/package.json
+++ b/packages/codemirror/glimdown/package.json
@@ -10,7 +10,7 @@
     "path": "packages/lezer/glimdown"
   },
   "devDependencies": {
-    "@glimdown/lezer-infra": "*",
+    "@glimdown/lezer-infra": "workspace:*",
     "@lezer/generator": "^1.2.3",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "mocha": "^10.2.0",
