--- a/packages/codemirror/glimmer/package.json
+++ b/packages/codemirror/glimmer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lezer-glimmer",
+  "name": "codemirror-lang-glimmer",
   "version": "0.0.0-alpha.0",
   "author": "NullVoxPopuli",
   "license": "MIT",
