--- a/packages/remark/syntax/package.json
+++ b/packages/remark/syntax/package.json
@@ -29,7 +29,12 @@
     "lint:fix": "pnpm -w exec lint fix"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "@vitest/coverage-c8": "^0.31.0",
     "c8": "^7.13.0",
     "common-tags": "^1.8.2",
     "eslint": "^8.40.0",
@@ -43,11 +48,7 @@
     "prettier": "^2.8.8",
     "typescript": "^5.0.4",
     "unified": "^10.1.2",
-    "vitest": "^0.31.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "@babel/eslint-parser": "^7.21.8",
-    "@babel/core": "^7.21.8"
+    "vitest": "^0.31.0"
   },
   "engines": {
     "node": ">=16.0.0"
