--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   "volta": {
     "node": "18.16.0",
     "pnpm": "8.2.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@changesets/assemble-release-plan@5.2.3": "patches/@changesets__assemble-release-plan@5.2.3.patch"
+    }
   }
 }
