--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "scripts": {
     "release": "changeset publish",
+    "prepare": "turbo run build --output-logs errors-only",
     "test": "turbo run test --output-logs errors-only",
     "lint:fix": "turbo run _:lint:fix --output-logs errors-only",
     "lint": "turbo run _:lint --output-logs errors-only"
