--- a/packages/codemirror/-infra/package.json
+++ b/packages/codemirror/-infra/package.json
@@ -15,8 +15,8 @@
     "extends": "../../../package.json"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4",
@@ -27,9 +27,9 @@
   "scripts": {
     "lint:fix": "pnpm -w exec lint fix",
     "lint": "pnpm -w exec lint",
-    "_:lint:js": "pnpm -w exec lint js",
-    "_:lint:js:fix": "pnpm -w exec lint js:fix",
-    "_:lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "_:lint:prettier": "pnpm -w exec lint prettier"
+    "lint:js": "pnpm -w exec lint js",
+    "lint:js:fix": "pnpm -w exec lint js:fix",
+    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
+    "lint:prettier": "pnpm -w exec lint prettier"
   }
 }
