--- a/packages/codemirror/glimmer-js/package.json
+++ b/packages/codemirror/glimmer-js/package.json
@@ -27,8 +27,8 @@
     "eslint": "^8.40.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "@babel/eslint-parser": "^7.21.8",
     "@babel/core": "^7.21.8"
   },
@@ -44,12 +44,12 @@
   "scripts": {
     "dev": "node ./dev/watch.cjs src/index.ts",
     "build": "cm-buildhelper src/index.ts",
-    "_:lint:js": "pnpm -w exec lint js",
-    "_:lint:js:fix": "pnpm -w exec lint js:fix",
-    "_:lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "_:lint:prettier": "pnpm -w exec lint prettier",
     "lint": "pnpm -w exec lint",
-    "lint:fix": "pnpm -w exec lint fix"
+    "lint:fix": "pnpm -w exec lint fix",
+    "lint:js": "pnpm -w exec lint js",
+    "lint:js:fix": "pnpm -w exec lint js:fix",
+    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
+    "lint:prettier": "pnpm -w exec lint prettier"
   },
   "volta": {
     "extends": "../../../package.json"
