--- a/packages/codemirror/glimmer/package.json
+++ b/packages/codemirror/glimmer/package.json
@@ -22,8 +22,8 @@
     "@codemirror/buildhelper": "^0.1.16",
     "@lezer/generator": "^1.2.3",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "codemirror": "^6.0.1",
     "concurrently": "^8.0.1",
     "eslint": "^8.40.0",
@@ -42,11 +42,11 @@
     "dev": "node ./dev/watch.cjs src/index.ts",
     "build": "cm-buildhelper src/index.ts",
     "lint": "pnpm -w exec lint",
-    "_:lint:js": "pnpm -w exec lint js",
-    "_:lint:js:fix": "pnpm -w exec lint js:fix",
-    "_:lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "_:lint:prettier": "pnpm -w exec lint prettier",
-    "lint:fix": "pnpm -w exec lint fix"
+    "lint:fix": "pnpm -w exec lint fix",
+    "lint:js": "pnpm -w exec lint js",
+    "lint:js:fix": "pnpm -w exec lint js:fix",
+    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
+    "lint:prettier": "pnpm -w exec lint prettier"
   },
   "volta": {
     "extends": "../../../package.json"
