--- a/packages/remark/syntax/package.json
+++ b/packages/remark/syntax/package.json
@@ -21,19 +21,19 @@
     "build:types": "tsc --build",
     "test": "vitest --coverage --no-watch",
     "test:watch": "vitest --watch",
-    "_:lint:js": "pnpm -w exec lint js",
-    "_:lint:js:fix": "pnpm -w exec lint js:fix",
-    "_:lint:prettier:fix": "pnpm -w exec lint prettier:fix",
-    "_:lint:prettier": "pnpm -w exec lint prettier",
     "lint": "pnpm -w exec lint",
-    "lint:fix": "pnpm -w exec lint fix"
+    "lint:fix": "pnpm -w exec lint fix",
+    "lint:js": "pnpm -w exec lint js",
+    "lint:js:fix": "pnpm -w exec lint js:fix",
+    "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
+    "lint:prettier": "pnpm -w exec lint prettier"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/eslint-parser": "^7.21.8",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "@vitest/coverage-c8": "^0.31.0",
     "c8": "^7.13.0",
     "common-tags": "^1.8.2",
