--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "release": "changeset publish",
-    "prepare": "turbo run build --output-logs errors-only",
+    "prepare": "pnpm build",
+    "build": "turbo run build --output-logs errors-only",
     "test": "turbo run test --output-logs errors-only",
     "lint:fix": "turbo run _:lint:fix --output-logs errors-only",
     "lint": "turbo run _:lint --output-logs errors-only"
