Setup new package: @glimdown/ember

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,8 +5,10 @@ packages:
   - "packages/codemirror/*/dev"
   # Tests, obvs
   - "packages/codemirror/*/tests"
+  - "packages/glimdown/*/tests"
   # Potentially publishables
   - "packages/*"
+  - "packages/glimdown/*"
   - "packages/remark/*"
   - "packages/lezer/*"
   - "packages/codemirror/*"
