--- a/packages/glimdown/ember/package.json
+++ b/packages/glimdown/ember/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "@glimdown/codemirror-dev-preview",
-  "private": true,
-  "version": "0.0.0",
-  "exports": {
-    "./print-tree": "./src/print-lezer-tree.ts"
+  "name": "@glimdown/ember",
+  "version": "0.0.0-alpha.0",
+  "main": "index.js",
+  "author": "NullVoxPopuli",
+  "license": "MIT",
+  "volta": {
+    "extends": "../../../package.json"
+  },
+  "peerDependencies": {
+    "@glimmer/compiler": "^0.84.3",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/syntax": "^0.84.3",
+    "ember-repl": "^3.0.0-beta.0",
+    "ember-source": "^4.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/eslint-parser": "^7.21.8",
+    "@glimmer/compiler": "^0.84.3",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/syntax": "^0.84.3",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "ember-repl": "^3.0.0-beta.0",
+    "ember-source": "^4.12.0",
     "eslint": "^8.40.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
@@ -22,12 +36,5 @@
     "lint:js:fix": "pnpm -w exec lint js:fix",
     "lint:prettier:fix": "pnpm -w exec lint prettier:fix",
     "lint:prettier": "pnpm -w exec lint prettier"
-  },
-  "dependencies": {
-    "@codemirror/state": "^6.2.0",
-    "@lezer/common": "^1.0.2"
-  },
-  "volta": {
-    "extends": "../../../package.json"
   }
 }
