--- a/packages/codemirror/glimmer/package.json
+++ b/packages/codemirror/glimmer/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.21.8",
     "@babel/eslint-parser": "^7.21.8",
     "@codemirror/buildhelper": "^0.1.16",
+    "@codemirror/language": "^6.6.0",
     "@lezer/generator": "^1.2.3",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -28,6 +29,8 @@
     "concurrently": "^8.0.1",
     "eslint": "^8.40.0",
     "prettier": "^2.8.8",
+    "rollup": "^3.21.5",
+    "rollup-plugin-ts": "^3.2.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
@@ -40,7 +43,7 @@
   },
   "scripts": {
     "dev": "node ./dev/watch.cjs src/index.ts",
-    "build": "cm-buildhelper src/index.ts",
+    "build": "rollup -c",
     "lint": "pnpm -w exec lint",
     "lint:fix": "pnpm -w exec lint fix",
     "lint:js": "pnpm -w exec lint js",
