--- a/packages/codemirror/glimmer/package.json
+++ b/packages/codemirror/glimmer/package.json
@@ -23,6 +23,7 @@
     "@codemirror/language": "^6.6.0",
     "@lezer/generator": "^1.2.3",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
+    "@tsconfig/ember": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "codemirror": "^6.0.1",
