--- a/packages/codemirror/-infra/package.json
+++ b/packages/codemirror/-infra/package.json
@@ -5,24 +5,24 @@
   "type": "module",
   "dependencies": {
     "@codemirror/language": "^6.6.0",
-    "@codemirror/view": "^6.11.0",
+    "@codemirror/view": "^6.11.2",
     "@lezer/generator": "^1.2.3",
     "@lezer/highlight": "^1.1.4",
     "@rollup/plugin-node-resolve": "^15.0.2",
-    "rollup": "^3.21.5"
+    "rollup": "^3.21.7"
   },
   "volta": {
     "extends": "../../../package.json"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
+    "@nullvoxpopuli/eslint-configs": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
     "prettier": "^2.8.8",
-    "typescript": "^5.0.4",
-    "@nullvoxpopuli/eslint-configs": "^3.1.3",
-    "@babel/eslint-parser": "^7.21.8",
-    "@babel/core": "^7.21.8"
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "lint:fix": "pnpm -w exec lint fix",
