--- a/packages/codemirror/glimdown/package.json
+++ b/packages/codemirror/glimdown/package.json
@@ -10,19 +10,19 @@
     "path": "packages/lezer/glimdown"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
     "@glimdown/lezer-infra": "workspace:*",
     "@lezer/generator": "^1.2.3",
+    "@nullvoxpopuli/eslint-configs": "^3.1.3",
     "@rollup/plugin-node-resolve": "^15.0.2",
-    "mocha": "^10.2.0",
-    "rollup": "^3.21.5",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.8",
-    "typescript": "^5.0.4",
-    "@nullvoxpopuli/eslint-configs": "^3.1.3",
-    "@babel/eslint-parser": "^7.21.8",
-    "@babel/core": "^7.21.8"
+    "rollup": "^3.21.7",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@lezer/highlight": "^1.1.4",
