--- a/packages/remark/syntax/package.json
+++ b/packages/remark/syntax/package.json
@@ -29,15 +29,15 @@
     "lint:prettier": "pnpm -w exec lint prettier"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/eslint-parser": "^7.21.8",
+    "@babel/core": "^7.22.5",
+    "@babel/eslint-parser": "^7.22.5",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "@vitest/coverage-c8": "^0.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "@vitest/coverage-v8": "^0.32.2",
     "c8": "^8.0.0",
     "common-tags": "^1.8.2",
-    "eslint": "^8.40.0",
+    "eslint": "^8.43.0",
     "eslint-plugin-decorator-position": "^5.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
@@ -48,7 +48,7 @@
     "prettier": "^2.8.8",
     "typescript": "^5.0.4",
     "unified": "^10.1.2",
-    "vitest": "^0.31.0"
+    "vitest": "^0.32.2"
   },
   "engines": {
     "node": ">=16.0.0"
