--- a/packages/lezer/glimdown/package.json
+++ b/packages/lezer/glimdown/package.json
@@ -1,55 +1,36 @@
 {
-  "name": "codemirror-lang-glimdown",
-  "version": "0.0.0-beta.3",
+  "name": "@glimdown/lezer",
+  "version": "0.0.0-beta.1",
   "author": "NullVoxPopuli",
   "license": "MIT",
   "type": "module",
-  "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs"
-  },
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/nullvoxpopuli/glimdown.git",
-    "path": "packages/codemirror/glimdown"
+    "path": "packages/lezer/glimdown"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/eslint-parser": "^7.22.5",
-    "@codemirror/buildhelper": "^1.0.0",
-    "@codemirror/language": "^6.8.0",
+    "@glimdown/lezer-infra": "workspace:*",
     "@lezer/generator": "^1.3.0",
     "@nullvoxpopuli/eslint-configs": "^3.1.3",
-    "@tsconfig/ember": "^2.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
-    "codemirror": "^6.0.1",
-    "concurrently": "^8.2.0",
     "eslint": "^8.43.0",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "rollup": "^3.21.7",
-    "rollup-plugin-ts": "^3.2.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@codemirror/lang-html": "^6.4.5",
-    "@codemirror/lang-markdown": "^6.2.0",
-    "@codemirror/language-data": "^6.3.1",
-    "@lezer/common": "^1.0.3",
     "@lezer/highlight": "^1.1.6",
-    "@lezer/html": "^1.3.4",
-    "@lezer/javascript": "^1.4.3",
-    "@lezer/lr": "^1.3.7",
-    "@lezer/markdown": "^1.0.3",
-    "codemirror-lang-glimmer": "workspace:*",
-    "codemirror-lang-glimmer-js": "workspace:*"
+    "@lezer/lr": "^1.3.7"
   },
   "scripts": {
-    "dev": "node ./dev/watch.cjs src/index.ts",
-    "build": "rollup -c",
+    "____:build": "lezer-generator src/glimdown.grammar -o src/parser && rollup -c",
+    "build-debug": "lezer-generator src/glimdown.grammar --names -o src/parser && rollup -c",
     "lint": "pnpm -w exec lint",
     "lint:fix": "pnpm -w exec lint fix",
     "lint:js": "pnpm -w exec lint js",
